--- a/wordle.html
+++ b/wordle.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div id="game" class="container">
-        <h1 class="mb-4">გამოიცანი დაშიფრული სიტყვა(Wordle)</h1>
+        <h1 class="mb-4">გამოიცანი დაშიფრული სიტყვა</h1>
         <div class="input-group mb-3">
             <input type="text" id="guess-input" class="form-control" maxlength="5">
             <div class="input-group-append">
@@ -70,7 +70,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="wordle.js"></script>
 </body>
 </html>
+
+
 
