--- a/wordle.html
+++ b/wordle.html
@@ -28,6 +28,7 @@
 
         #results {
             margin-top: 20px;
+            font-size:30px;
         }
 
         .result.correct {
@@ -70,7 +71,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="wordle.js"></script>
 </body>
 </html>
 
