--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br>
     <center><h1>გამოიცანით დამალული სიტყვა</h1></center>
     <center><h2>ინსტრუქციები:</h2></center>
-    <center><h4>შეეცადეთ გამოიცნოთ დამალული სიტყვა 6 ან ნაკლებ ცდაში!<br>ყველა ცდის შემდეგ მინიშნებებს მიიღებთ ასოების მდებარეობაზე!</h4></center>
+    <center><h4>შეეცადეთ გამოიცნოთ დამალული 5 - ასოიანი სიტყვა 6 ან ნაკლებ ცდაში!<br>თითოეული ცდის შემდეგ მიიღებთ მინიშნებას ასოების მდებარეობაზე</h4></center>
     <br><br>
     <center><button type="button" class="btn btn-success"><a href = "wordle.html" id = "gamebutton">დაიწყეთ თამაში!</button></center>
     
