--- a/7wordle.html
+++ b/7wordle.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 <body>
-    <center><button><a></a></button></center>
+    <center><button><a href = "7wordle.html>დაიწყე თავიდან</a></button></center>
     <div id="game" class="container">
         <h1 class="mb-4">გამოიცანი დაშიფრული სიტყვა</h1>
         <div id="hint" class="alert alert-info"></div>
