--- a/wordle.html
+++ b/wordle.html
@@ -56,6 +56,7 @@
 </head>
 <body>
     <center><button><a href = "choosebetween.html">დაბრუნდი მთავარ გვერდზე</a></button></center>
+    <center><button><a href = "wordle.html">დაიწყე თავიდან</a></button></center>
     <div id="game" class="container">
         <h1 class="mb-4">გამოიცანი დაშიფრული სიტყვა</h1>
         <div class="input-group mb-3">
