--- a/choosebetween.html
+++ b/choosebetween.html
@@ -9,23 +9,17 @@
         body {
             background-color: bisque;
         }
-        #idk {
-            color:white;
-        }
-        #fbt {
-            margin-top: 300px;
-            margin-bottom: -50px;
-        }
-        #sidk {
-            color:white;
-        }
-        #sbt {
+        .btn-custom {
             margin-top: 100px;
         }
     </style>
 </head>
 <body>
-    <center><button type="button" class="btn btn-success" id = "fbt" ><a href = "index.html" id = "idk">5 ასოიანი სიტყვები</a></button></center>
-    <center><button type="button" class="btn btn-success" id = "sbt" ><a href = "7index.html" id = "sidk">7 ასოიანი სიტყვები</a></button></center>
+    <center>
+        <a href="index.html" class="btn btn-success btn-custom">5 ასოიანი სიტყვები</a>
+    </center>
+    <center>
+        <a href="7index.html" class="btn btn-success btn-custom">7 ასოიანი სიტყვები</a>
+    </center>
 </body>
 </html>
